@@ -3,5 +3,5 @@ EXPOSE 8000
 WORKDIR /app
 
 COPY target/*.jar /app/
-CMD java -jar *.jar
+CMD java --enable-preview -jar *.jar
 
